<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/screen"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/basketball"
        android:id="@+id/imageView"
        android:scaleType="fitXY"
        />
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:gravity="center_horizontal"
            android:textSize="@dimen/bigLetters"
            android:fontFamily="casual"
            android:textColor="@color/black"
            />



        <LinearLayout
            android:layout_marginTop="@dimen/bigMargin"
            android:id="@+id/AllScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/bigMargin"
                        android:layout_marginRight="@dimen/bigMargin"
                        android:orientation="vertical">

                        <EditText
                            style="@style/value"
                            android:layout_width="match_parent"
                            android:id="@+id/team_a_name"
                            android:layout_marginBottom="@dimen/mediumMargin"
                            android:layout_marginTop="@dimen/smallMargin"
                            android:cursorVisible="false"
                            android:text="@string/TeamA"
                            android:textSize="@dimen/mediumLetters" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <Button
                                    style="@style/points"
                                    android:onClick="addOneForTeamA"
                                    android:text="@string/FT" />


                                <Button
                                    style="@style/points"
                                    android:onClick="addTwoForTeamA"
                                    android:text="@string/two"

                                    />

                                <Button
                                    style="@style/points"
                                    android:onClick="addThreeForTeamA"
                                    android:text="@string/three" />


                            </LinearLayout>

                            <TextView
                                android:id="@+id/team_a_score"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="8dp"
                                android:text="@string/init"
                                android:textColor="@color/white"
                                android:textSize="32sp"

                                />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/bigMargin"
                        android:orientation="horizontal">

                        <Button
                            style="@style/button"
                            android:layout_marginRight="@dimen/smallMargin"
                            android:onClick="addReboundsTeamA"
                            android:text="@string/REB" />


                        <TextView
                            android:id="@+id/team_a_rebounds"
                            style="@style/value"
                            android:layout_width="wrap_content"
                             />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            style="@style/button"
                            android:onClick="addTurnoversTeamA"
                            android:text="@string/Turnovers"

                            />


                        <TextView
                            android:id="@+id/team_a_turnovers"
                            style="@style/value" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            style="@style/button"
                            android:onClick="addAssistsTeamA"
                            android:text="@string/Assists" />


                        <TextView
                            android:id="@+id/team_a_assists"
                            style="@style/value" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            style="@style/button"
                            android:onClick="addBlocksTeamA"
                            android:text="@string/Blocks"

                            />

                        <TextView
                            android:id="@+id/team_a_blocks"
                            style="@style/value" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            style="@style/button"
                            android:onClick="addFoulsTeamA"
                            android:text="@string/Fouls" />


                        <TextView
                            android:id="@+id/team_a_fouls"
                            style="@style/value" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/bigMargin"
                        android:layout_marginRight="@dimen/bigMargin"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/team_b_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/mediumMargin"
                            android:layout_marginTop="@dimen/smallMargin"
                            android:cursorVisible="false"
                            android:gravity="center_horizontal"
                            android:text="@string/TeamB"
                            android:textColor="@color/white"
                            android:textSize="@dimen/mediumLetters" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <Button
                                    style="@style/points"
                                    android:onClick="addOneForTeamB"
                                    android:text="@string/FT" />


                                <Button
                                    style="@style/points"
                                    android:onClick="addTwoForTeamB"
                                    android:text="@string/two"

                                    />

                                <Button
                                    style="@style/points"
                                    android:onClick="addThreeForTeamB"
                                    android:text="@string/three" />


                            </LinearLayout>

                            <TextView
                                android:id="@+id/team_b_score"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="8dp"
                                android:text="@string/init"
                                android:textColor="@color/white"
                                android:textSize="@dimen/bigLetters"

                                />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/bigMargin"
                        android:orientation="horizontal">

                        <Button
                            style="@style/button"
                            android:layout_marginRight="@dimen/smallMargin"
                            android:onClick="addReboundsTeamB"
                            android:text="@string/REB" />


                        <TextView
                            android:id="@+id/team_b_rebounds"
                            style="@style/value"
                            android:layout_width="wrap_content"
                             />

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            style="@style/button"
                            android:onClick="addTurnoversTeamB"
                            android:text="@string/Turnovers"

                            />


                        <TextView
                            android:id="@+id/team_b_turnovers"
                            style="@style/value" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            style="@style/button"
                            android:onClick="addAssistsTeamB"
                            android:text="@string/Assists" />


                        <TextView
                            android:id="@+id/team_b_assists"
                            style="@style/value" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            style="@style/button"
                            android:onClick="addBlocksTeamB"
                            android:text="@string/Blocks"

                            />

                        <TextView
                            android:id="@+id/team_b_blocks"
                            style="@style/value" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            style="@style/button"
                            android:onClick="addFoulsTeamB"
                            android:text="@string/Fouls" />


                        <TextView
                            android:id="@+id/team_b_fouls"
                            style="@style/value" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <Button
            style="@style/button"
            android:onClick="resetScore"
            android:text="@string/reset"

            android:layout_below="@+id/AllScore"
            android:layout_centerHorizontal="true"/>
        

 </RelativeLayout>

</ScrollView>